fix(scrollbar): remove scrollbars from <pre>

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -240,7 +240,7 @@ pre {
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   text-shadow: none;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 code {
